2008-08-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Jonathan Matthew  <notverysmart gmail com>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	  Add typefinder for PDF documents (which is nice to have, since it's a
	  common format, but also helps prevent false positives). Fixes #549814.

2008-08-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (selector_blocked), (pad_added_cb),
	(no_more_pads_cb):
	Fix nasty race where multiple decodebins could start pushing data before
	we manage to configure the sinks, resulting in not-linked errors in
	typical RTSP streaming cases.

2008-08-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstaudiosink.c: (gst_audioringbuffer_stop):
	Since we now call stop, we trigger this code path that causes a deadlock
	is apparently not needed.

2008-08-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_start),
	(gst_ring_buffer_stop):
	Also allow the case where the ringbuffer was paused when we try to stop
	it so that the basesrc stop function is still called.

2008-08-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Mike Ruprecht <cmaiku at gmail dot com>

	* sys/v4l/gstv4lelement.c: (gst_v4l_class_probe_devices):
	Reprobe devices again instead of taking a cached list as new
	devices could've been plugged in. Fixes bug #549062.

2008-08-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Alessandro Dessina <alessandro nnva org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_deactivate_current_chain),
	(gst_ogg_demux_activate_chain):
	Don't add pads and activate them for skeleton streams. These are already
	handled inside oggdemux. Fixes bug #537599.

2008-08-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/vorbis/vorbisdec.c: (vorbis_dec_change_state):
	Reset variable so that query and convert fail after going back to
	READY. Fixes #548898.
